Fix title word wrap

--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -76,22 +76,27 @@ code {
 /* Adds GitHub style links to headers on mouseover */
 .post-content h2 {
     text-indent: -10px;
+    overflow-wrap: break-word;
 }
 
 .post-content h3 {
     text-indent: -8px;
+    overflow-wrap: break-word;
 }
 
 .post-content h4 {
     text-indent: -6px;
+    overflow-wrap: break-word;
 }
 
 .post-content h5 {
     text-indent: -4px;
+    overflow-wrap: break-word;
 }
 
 .post-content h6 {
     text-indent: -2px;
+    overflow-wrap: break-word;
 }
 
 h1 .octicon, h2 .octicon, h3 .octicon, h4 .octicon, h5 .octicon, h6 .octicon {
